--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/cdep-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/cdep-logo.svg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>CDEP</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+o
